fix  download button spacing but and update package for build

--- a/src/twkTheme.scss
+++ b/src/twkTheme.scss
@@ -331,7 +331,7 @@ navbar-nav .dropdown-menu {
   text-shadow: 2px 2px 4px black;
 }
 // Adjust download resume text spacing
-.download-resume span {
+#download-resume-wrapper {
   position: relative;
   top: 2px;
   left: 5px;
